--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres_db:
     image: postgres:15
@@ -27,6 +25,8 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
     command: ["java", "-jar", "/app.jar"]
+    volumes:
+      - ./build/api-docs:/app/docs
 
 volumes:
   postgres_data:
