--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ecommerce
 
-spring.datasource.url=jdbc:postgresql://postgres_db:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=250299
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database=postgresql
