--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.datasource.username=postgres
 spring.datasource.password=250299
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# DOCKER USE
+#spring.datasource.url=jdbc:postgresql://postgres_db:5432/ecommerce
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
